// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeadContainer should render correctly with another props 1`] = `
<thead
  className="MuiTableHead-root-1"
>
  <tr
    className="MuiTableRow-root-2 MuiTableRow-head-3"
  >
    <th
      aria-sort="descending"
      className="MuiTableCell-root-7 MuiTableCell-head-8 MuiTableCell-paddingCheckbox-13"
      scope="col"
    >
      <div
        className="MuiTooltip-root-15"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-29 MuiTableSortLabel-root-24"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          position
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32 MuiTableSortLabel-icon-26 MuiTableSortLabel-iconDirectionAsc-28"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-16 MuiTooltip-popperClose-17"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-18 MuiTooltip-tooltipPlacementBottom-22"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
    <th
      aria-sort="descending"
      className="MuiTableCell-root-7 MuiTableCell-head-8 MuiTableCell-paddingCheckbox-13"
      scope="col"
    >
      <div
        className="MuiTooltip-root-15"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-29 MuiTableSortLabel-root-24"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          team
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32 MuiTableSortLabel-icon-26 MuiTableSortLabel-iconDirectionAsc-28"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-16 MuiTooltip-popperClose-17"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-18 MuiTooltip-tooltipPlacementBottom-22"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
    <th
      aria-sort="descending"
      className="MuiTableCell-root-7 MuiTableCell-head-8 MuiTableCell-paddingCheckbox-13"
      scope="col"
    >
      <div
        className="MuiTooltip-root-15"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-29 MuiTableSortLabel-root-24 MuiTableSortLabel-active-25"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          points
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32 MuiTableSortLabel-icon-26 MuiTableSortLabel-iconDirectionAsc-28"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-16 MuiTooltip-popperClose-17"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-18 MuiTooltip-tooltipPlacementBottom-22"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`TableHeadContainer should render correctly with default props 1`] = `
<thead
  className="MuiTableHead-root-1"
>
  <tr
    className="MuiTableRow-root-2 MuiTableRow-head-3"
  >
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-7 MuiTableCell-head-8 MuiTableCell-paddingCheckbox-13"
      scope="col"
    >
      <div
        className="MuiTooltip-root-15"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-29 MuiTableSortLabel-root-24"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          position
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32 MuiTableSortLabel-icon-26 MuiTableSortLabel-iconDirectionDesc-27"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-16 MuiTooltip-popperClose-17"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-18 MuiTooltip-tooltipPlacementBottom-22"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-7 MuiTableCell-head-8 MuiTableCell-paddingCheckbox-13"
      scope="col"
    >
      <div
        className="MuiTooltip-root-15"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-29 MuiTableSortLabel-root-24"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          team
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32 MuiTableSortLabel-icon-26 MuiTableSortLabel-iconDirectionDesc-27"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-16 MuiTooltip-popperClose-17"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-18 MuiTooltip-tooltipPlacementBottom-22"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-7 MuiTableCell-head-8 MuiTableCell-paddingCheckbox-13"
      scope="col"
    >
      <div
        className="MuiTooltip-root-15"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-29 MuiTableSortLabel-root-24"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          points
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32 MuiTableSortLabel-icon-26 MuiTableSortLabel-iconDirectionDesc-27"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-16 MuiTooltip-popperClose-17"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-18 MuiTooltip-tooltipPlacementBottom-22"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`TableHeadContainer should render correctly with different props 1`] = `
<thead
  className="MuiTableHead-root-1"
>
  <tr
    className="MuiTableRow-root-2 MuiTableRow-head-3"
  >
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-7 MuiTableCell-head-8 MuiTableCell-paddingCheckbox-13"
      scope="col"
    >
      <div
        className="MuiTooltip-root-15"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-29 MuiTableSortLabel-root-24"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          position
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32 MuiTableSortLabel-icon-26 MuiTableSortLabel-iconDirectionDesc-27"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-16 MuiTooltip-popperClose-17"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-18 MuiTooltip-tooltipPlacementBottom-22"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-7 MuiTableCell-head-8 MuiTableCell-paddingCheckbox-13"
      scope="col"
    >
      <div
        className="MuiTooltip-root-15"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-29 MuiTableSortLabel-root-24 MuiTableSortLabel-active-25"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          team
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32 MuiTableSortLabel-icon-26 MuiTableSortLabel-iconDirectionDesc-27"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-16 MuiTooltip-popperClose-17"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-18 MuiTooltip-tooltipPlacementBottom-22"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
    <th
      aria-sort="ascending"
      className="MuiTableCell-root-7 MuiTableCell-head-8 MuiTableCell-paddingCheckbox-13"
      scope="col"
    >
      <div
        className="MuiTooltip-root-15"
      >
        <span
          aria-describedby={undefined}
          className="MuiButtonBase-root-29 MuiTableSortLabel-root-24"
          onBlur={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          points
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32 MuiTableSortLabel-icon-26 MuiTableSortLabel-iconDirectionDesc-27"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </span>
        <div
          className="MuiTooltip-popper-16 MuiTooltip-popperClose-17"
          data-placement={undefined}
          data-x-out-of-boundaries={undefined}
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            className="MuiTooltip-tooltip-18 MuiTooltip-tooltipPlacementBottom-22"
            id={undefined}
            role="tooltip"
          >
            Sort
          </div>
        </div>
      </div>
    </th>
  </tr>
</thead>
`;
